fix icons not aligned where they should, fix excel and pdf, removed highlight on notification click in main datatables

--- a/src/app/components/notification/notification.component.css
+++ b/src/app/components/notification/notification.component.css
@@ -197,3 +197,10 @@ button:hover,
   padding: 12px;
   text-align: center;
 }
+
+
+
+table.dataTable tbody tr.selected {
+  background-color: transparent !important;
+}
+
